--- a/public/css/index.css
+++ b/public/css/index.css
@@ -226,9 +226,9 @@
 /* Sidebars */
 .stroke-sidebar {
     width: 220px;
-    position: absolute;
+    position: fixed;
     top: 20px;
-    left: 20px;
+    left: 0px;
     background: #f5f5f5;
     padding: 10px;
     border-radius: 4px;
@@ -240,9 +240,9 @@
 }
 .image-sidebar {
     width: 220px;
-    position: absolute;
+    position: fixed;
     top: 20px;
-    right: 20px;
+    right: 0px;
     background: #f5f5f5;
     padding: 0;
     border-radius: 4px;
