some vite fixes

--- a/css/tailwind.input.css
+++ b/css/tailwind.input.css
@@ -1,1 +1,7 @@
-@import "tailwindcss";
+@import 'tailwindcss';
+
+@source "../index.html";
+@source "../js/**/*.{js,ts}";
+@source "../public/js/**/*.{js,ts}";
+@source "../src/**/*.{js,ts,jsx,tsx}";
+@source "../server/**/*.{js,ts}";
